example/src/snapshots/rust_sitter_example__arithmetic__tests__failed_parses-2.snap
---
source: example/src/arithmetic.rs
expression: "grammar::Expression::parse(\"1 - 2 -\")"
---
ParseResult {
    result: None,
    errors: [
        ParseError {
            node_position: Position {
                bytes: 7..7,
                start: Point {
                    line: 1,
                    column: 8,
                },
                end: Point {
                    line: 1,
                    column: 8,
                },
            },
            error_position: Position {
                bytes: 7..7,
                start: Point {
                    line: 1,
                    column: 8,
                },
                end: Point {
                    line: 1,
                    column: 8,
                },
            },
            lookaheads: [
                "Expression_Number_0",
            ],
            reason: Missing,
        },
        ParseError {
            node_position: Position {
                bytes: 7..7,
                start: Point {
                    line: 1,
                    column: 8,
                },
                end: Point {
                    line: 1,
                    column: 8,
                },
            },
            error_position: Position {
                bytes: 7..7,
                start: Point {
                    line: 1,
                    column: 8,
                },
                end: Point {
                    line: 1,
                    column: 8,
                },
            },
            lookaheads: [],
            reason: TypeConversion(
                ParseIntError {
                    kind: Empty,
                },
            ),
        },
    ],
}
