example/src/snapshots/rust_sitter_example__arithmetic__tests__failed_parses-3.snap
---
source: example/src/arithmetic.rs
expression: "grammar::parse(\"a1\")"
---
Err(
    [
        ParseError {
            reason: FailedNode(
                [
                    ParseError {
                        reason: UnexpectedToken(
                            "a",
                        ),
                        start_byte: 0,
                        end_byte: 1,
                        start_point: Point {
                            line: 1,
                            column: 1,
                        },
                        end_point: Point {
                            line: 1,
                            column: 2,
                        },
                        text: "a",
                        kind: "ERROR",
                        parent_context: Some(
                            ParentContext {
                                kind: "ERROR",
                                content: "a",
                                sexpr: "(ERROR (UNEXPECTED 'a'))",
                            },
                        ),
                    },
                ],
            ),
            start_byte: 0,
            end_byte: 1,
            start_point: Point {
                line: 1,
                column: 1,
            },
            end_point: Point {
                line: 1,
                column: 2,
            },
            text: "a",
            kind: "ERROR",
            parent_context: Some(
                ParentContext {
                    kind: "source_file",
                    content: "a1",
                    sexpr: "(source_file (ERROR (UNEXPECTED 'a')) (Expression_Number 0: (Expression_Number_0)))",
                },
            ),
        },
    ],
)
