example/src/snapshots/rust_sitter_example__arithmetic__tests__failed_parses-4.snap
---
source: example/src/arithmetic.rs
expression: "grammar::Expression::parse(\"1a\")"
---
ParseResult {
    result: None,
    errors: [
        ParseError {
            node_position: Position {
                bytes: 0..2,
                start: Point {
                    line: 1,
                    column: 1,
                },
                end: Point {
                    line: 1,
                    column: 3,
                },
            },
            error_position: Position {
                bytes: 1..2,
                start: Point {
                    line: 1,
                    column: 2,
                },
                end: Point {
                    line: 1,
                    column: 3,
                },
            },
            lookaheads: [
                "Expression_Sub_1",
                "Expression_Mul_1",
            ],
            reason: Error,
        },
        ParseError {
            node_position: Position {
                bytes: 0..0,
                start: Point {
                    line: 1,
                    column: 1,
                },
                end: Point {
                    line: 1,
                    column: 1,
                },
            },
            error_position: Position {
                bytes: 0..0,
                start: Point {
                    line: 1,
                    column: 1,
                },
                end: Point {
                    line: 1,
                    column: 1,
                },
            },
            lookaheads: [],
            reason: MissingEnum {
                node_kind: "source_file",
                enum_name: "ERROR",
            },
        },
    ],
}
