example/src/snapshots/rust_sitter_example__arithmetic__tests__failed_parses.snap
---
source: example/src/arithmetic.rs
expression: "grammar::Expression::parse(\"1 + 2\")"
---
ParseResult {
    result: Some(
        Number(
            2,
        ),
    ),
    errors: [
        ParseError {
            node_position: Position {
                bytes: 0..3,
                start: Point {
                    line: 1,
                    column: 1,
                },
                end: Point {
                    line: 1,
                    column: 4,
                },
            },
            error_position: Position {
                bytes: 2..3,
                start: Point {
                    line: 1,
                    column: 3,
                },
                end: Point {
                    line: 1,
                    column: 4,
                },
            },
            lookaheads: [
                "_Whitespace__whitespace",
                "Expression_Sub_1",
                "Expression_Mul_1",
            ],
            reason: Error,
        },
    ],
}
